packages/kity-assets/public/assets/styles/base.css
.kf-editor {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    border: 1px solid #e0e0e0;
    position: relative;
    top: 0;
    left: 0;

    overflow: hidden;
    z-index: 2;
    background-color: #f6f5ee;
}

.kf-editor-edit-area {
    width: 100%;
    position: relative;
    top: 0;
    left: 0;

    display: block;
    z-index: 1;
    flex: 1 1 auto;
    min-height: 100px;
    height: 100px;
    background-color: white;
    /*background-color: white;*/
    /*background-size: 21px 21px;*/
    /*background-position: 0 0,10px 10px;*/
    /*background-image: -webkit-linear-gradient(45deg,#efefef 25%,transparent 25%,transparent 75%,#efefef 75%,#efefef),-webkit-linear-gradient(45deg,#efefef 25%,transparent 25%,transparent 75%,#efefef 75%,#efefef);*/
    /*background-image: linear-gradient(45deg,#efefef 25%,transparent 25%,transparent 75%,#efefef 75%,#efefef),linear-gradient(45deg,#efefef 25%,transparent 25%,transparent 75%,#efefef 75%,#efefef);*/
}

.kf-editor-canvas-container {
    width: 100%;
    height: 100%;
}

.kf-editor-input-box {
    position: fixed;
    top: 0;
    left: -99999999px;
    z-index: 999999;
}

